dark mode tweaks, fixed body/footer gap problem

--- a/_sass/_body.sass
+++ b/_sass/_body.sass
@@ -1,7 +1,10 @@
 html
+  height: 100%
   background-color: var(--color-body)
 
 body
+  min-height: 100%
+  overflow-x: hidden
   font-family: var(--fam-serif)
   font-size: var(--body-size)
   line-height: var(--line-height-body)
