--- a/_sass/_figure.sass
+++ b/_sass/_figure.sass
@@ -77,10 +77,10 @@ article
 
 //-----------------------------------------------------------------------------
 
-@media (prefers-color-scheme: dark)
+//@media (prefers-color-scheme: dark)
   
   article img
-    opacity: .75
+    opacity: .9
     transition: opacity .5s ease-in-out
     &:hover
       opacity: 1
