--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -1,5 +1,6 @@
 footer
-  margin: 0 auto var(--shim-p) auto
+  margin: 0 auto
+  padding-bottom: var(--shim-p)
   ul
     margin: var(--shim-n) auto 0 auto
     max-width: var(--page-width)
