--- a/_sass/_vars.sass
+++ b/_sass/_vars.sass
@@ -10,7 +10,7 @@
 
 \:root
 
-  --fam-logo: 'Averia Serif Libre', serif
+  --fam-logo: 'Averia Sans Libre', sans-serif
   --fam-serif: Georgia, Constantia, 'Lucida Bright', Lucidabright, 'Lucida Serif', Lucida, 'DejaVu Serif', 'Bitstream Vera Serif', 'Liberation Serif', serif
  
   --line-height-body: 1.6875
@@ -47,7 +47,7 @@
   --color-select: hsl(60,100%,90%)
 
   --color-body: hsl(0, 0%, 98%)
-  --color-body-dark: hsl(0, 0%, 95%)
+  --color-body-dark: hsl(0, 0%, 92%)
   --color-back: hsl(0, 0%, 89%)
   --color-shade: hsl(0, 0%, 75%)
   --color-half: hsl(0, 0%, 49%)
@@ -60,7 +60,7 @@
   --color-hr-bottom-light: hsl(0, 0%, 100%)
 
   --color-hr-top-dark: hsl(0, 0%, 78%)
-  --color-hr-bottom-dark: hsl(0, 0%, 98%)
+  --color-hr-bottom-dark: hsl(0, 0%, 95%)
 
 //-----------------------------------------------------------------------------
 
